<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="387dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <TextView
                android:id="@+id/textView"
                android:layout_width="103dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/data"
                android:text="@string/data"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/dataBoletim"
                android:layout_width="150dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/dia_do_boletim"
                android:gravity="center_vertical"
                android:text="00/00/00"
                android:textColor="#00BFA5"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/numeroSuspeitos"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="93dp"
                android:layout_height="26dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="28dp"
                android:contentDescription="@string/suspeitos"
                android:gravity="center"
                android:text="@string/suspeitos"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/numeroSuspeitos"
                android:layout_width="92dp"
                android:layout_height="26dp"
                android:layout_marginEnd="28dp"
                android:contentDescription="@string/numero_de_suspeitos"
                android:gravity="center"
                android:text="0000"
                android:textColor="#00BFA5"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/ic_virus2_foreground" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>